crates/fluvio-connector-common/ui-test/ui/config_input_self.stderr
error: config input argument must not be self
 --> ui-test/ui/config_input_self.rs:4:19
  |
4 | async fn start_fn(self, producer: ()) {}
  |                   ^^^^

error[E0601]: `main` function not found in crate `$CRATE`
 --> ui-test/ui/config_input_self.rs:4:41
  |
4 | async fn start_fn(self, producer: ()) {}
  |                                         ^ consider adding a `main` function to `$DIR/ui-test/ui/config_input_self.rs`
